--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,10 +19,10 @@ jobs:
       - name: Set up Qt
         uses: jurplel/install-qt-action@v2
         with:
-          version: "5.15.2" # Change to your Qt version
+          version: "5.15.2"
           host: windows
           target: desktop
-          arch: win64_msvc2019_64 # Use appropriate architecture
+          arch: win64_msvc2019_64
 
       - name: Build Qt application
         run: |
@@ -51,7 +51,7 @@ jobs:
       - name: Set up Qt
         uses: jurplel/install-qt-action@v2
         with:
-          version: "5.15.2" # Change to your Qt version
+          version: "5.15.2"
           host: mac
           target: desktop
 
@@ -81,7 +81,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get install qt5-default qtdeclarative5-dev qtmultimedia5-dev qtquickcontrols2-5-dev libqt5svg5-dev
+          sudo apt-get update
+          sudo apt-get install -y qtbase5-dev qtdeclarative5-dev qtmultimedia5-dev qtquickcontrols2-5-dev libqt5svg5-dev
 
       - name: Build Qt application
         run: |
