--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,13 +15,13 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake linuxdeployqt dos2unix wget
+          sudo apt-get install -y build-essential cmake qt6-base-dev qt6-tools-dev-tools dos2unix wget
 
       - name: Install Qt 6.4.0
         run: |
           wget https://download.qt.io/official_releases/qt/6.4/6.4.0/qt-opensource-linux-x64-6.4.0.run
           chmod +x qt-opensource-linux-x64-6.4.0.run
-          ./qt-opensource-linux-x64-6.4.0.run --script /tmp/install_qt.qs
+          ./qt-opensource-linux-x64-6.4.0.run --script /tmp/install_qt.qs || true
         env:
           QT_INSTALL_PREFIX: /opt/qt6
 
@@ -29,6 +29,8 @@ jobs:
         run: |
           export PATH=/opt/qt6/bin:$PATH
           export LD_LIBRARY_PATH=/opt/qt6/lib:$LD_LIBRARY_PATH
+          echo "Qt path: $PATH"
+          echo "LD_LIBRARY_PATH: $LD_LIBRARY_PATH"
           qmake --version
 
       - name: Remove old AppImage if exists
@@ -56,6 +58,9 @@ jobs:
           cp $HOME/Documents/Programming/C++/NFOBuilder/resources/plex-nfo.png $HOME/Documents/Programming/C++/release/default.png
           cp $HOME/Documents/Programming/C++/NFOBuilder/resources/plex-nfo.ico $HOME/Documents/Programming/C++/release
           rm -rf $HOME/Documents/Programming/C++/release/resources/
+
+      - name: Install linuxdeployqt
+        uses: miurahr/install-linuxdeployqt-action@v1.0.1
 
       - name: Build AppImage
         run: |
