--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ env:
   VERSION: "1.3.2"
   EXECUTABLE: "NFOBuilder"
   APPLICATION: "NFO Builder"
-  QMAKE_PROJECT: "NFOBuilder.pro"
+  QMAKE_PROJECT: "NFO-Creator.pro"
   QML_DIR_NIX: "assets/qml"
   QML_DIR_WIN: "assets\\qml"
 
