--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,6 +44,9 @@ jobs:
       #
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
+        with:
+          version: "6.4.0" # Ensure the version includes WebEngine
+          modules: "qtwebengine"
 
       #
       # Install additional dependencies, stolen from:
@@ -106,6 +109,9 @@ jobs:
       #
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
+        with:
+          version: "6.4.0" # Ensure the version includes WebEngine
+          modules: "qtwebengine"
 
       #
       # Compile application
@@ -168,6 +174,9 @@ jobs:
       #
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
+        with:
+          version: "6.4.0" # Ensure the version includes WebEngine
+          modules: "qtwebengine"
 
       #
       # Install NSIS
