--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
   # GNU/Linux build (we run on Ubuntu 16.04 to generate AppImage)
   #
   build-linux:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       #
       # Checkout the repository
@@ -45,7 +45,6 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
         with:
-          version: "6.4.0" # Ensure the version includes WebEngine
           modules: "qtwebengine"
 
       #
@@ -110,7 +109,6 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
         with:
-          version: "6.4.0" # Ensure the version includes WebEngine
           modules: "qtwebengine"
 
       #
@@ -175,7 +173,6 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4.0.0
         with:
-          version: "6.4.0" # Ensure the version includes WebEngine
           modules: "qtwebengine"
 
       #
