--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ on:
 
 env:
   VERSION: "1.3.2"
-  EXECUTABLE: "NFOBuilder"
+  EXECUTABLE: "NFO-Creator"
   APPLICATION: "NFO Builder"
   QMAKE_PROJECT: "NFO-Creator.pro"
   QML_DIR_NIX: "assets/qml"
