--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -206,14 +206,12 @@ jobs:
 
       #
       # Create NSIS installer
-      #
+      # TODO: - deploy\windows\nsis doesnt seem to exist
+      #       - if it does work, setup.nsi appears to be missing
+      #       - something in nsis setup is borked
       - name: Make NSIS installer
         run: |
-          echo Current Directory/NFOBuilder Contents:
-          dir NFOBuilder
-          echo Current Directory/NFOBuilder/bin Contents:
-          dir NFOBuilder/bin
-          move "${{env.APPLICATION}}" deploy\windows\nsis\
+          move "${{env.APPLICATION}}" deploy\windows\nsis\ 
           cd deploy\windows\nsis
           makensis /X"SetCompressor /FINAL lzma" setup.nsi
           ren *.exe ${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
